--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/dejaguarkyng/pyusd-gaurdian/issues"
   },
-  "homepage": "https://github.com/dejaguarkyng/pyusd-gaurdian#readme"
+  "homepage": "https://github.com/dejaguarkyng/pyusd-gaurdian#readme",
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "ethers": "^6.13.5"
+  }
 }
