--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  {
+    "type": "module",
+    "scripts": {
+      "start": "node blockMonitor.js"
+    }
+  }
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dejaguarkyng/pyusd-gaurdian.git"
