--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "p-limit": "^4.0.0",
+"winston": "^3.10.0"
   }
 }
