--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/dejaguarkyng/pyusd-gaurdian#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2",
     "nodemailer": "^6.10.0",
     "p-limit": "^4.0.0",
-"winston": "^3.10.0"
+    "socket.io": "^4.8.1",
+    "winston": "^3.10.0"
   }
 }
