--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
     "express": "^5.1.0",
+    "googleapis": "^148.0.0",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.0",
     "p-limit": "^4.0.0",
