Add MongoDB integration for Discord alerts and refactor alert sending logic

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "ethers": "^6.13.5",
     "express": "^5.1.0",
     "googleapis": "^148.0.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "p-limit": "^4.0.0",
     "socket.io": "^4.8.1",
