--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "p-limit": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "socket.io": "^4.8.1",
     "winston": "^3.10.0"
   }
 }
-
-
